syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.pro3.Danish_Crown_PRO3.grpc";

service Danish_Crown_Impl {
    rpc GetAnimal(animalrequest) returns (animalresponse);
    rpc AddAnimal(animalrequest) returns (animalresponse);
    rpc GetAllAnimals(EmptyMessage) returns (animalListResponse);
    rpc GetAllProducts(EmptyMessage) returns (productListResponse);
}

message animalrequest{
    string animalId = 1;
    string weight = 2;
    string arrivalDate = 3;
    string status = 4;
}
message productrequest{
    string productid = 1;
    string packagetype = 2;
    string animal = 3;
}
message EmptyMessage {

}

message animalresponse {
    string animalId = 1;
    string weight = 2;
    string arrivalDate = 3;
    string status = 4;
    string message = 5; // Besked som kan indikere succes eller fejl
}

message productsresponse{
    string productid = 1;
    string packagetype = 2;
    string animal = 3;
    string message = 5; // Besked som kan indikere succes eller fejl
}

message animalListResponse {
    repeated animalrequest animals = 1; // 'repeated' bruges til at definere en liste
    string message = 2; // Ekstra statusbesked
}

message productListResponse {
    repeated productrequest products = 1;
}